# Audio-Cutter

./: .editorconfig  .gitignore  README.md  TODO  TODO.md  audio-cutter.py.in  circle.yml  meson.build  org.gnome.AudioCutter.json  setup.cfg
AudioCutter/: __init__.py  application.py  const.py  objects.py  utils.py
AudioCutter/modules/: __init__.py  exporter.py  log.py  player.py  settings.py
AudioCutter/objects/: renderer.c
AudioCutter/widgets/: __init__.py  about.py  actionbar.py  audio_graph.py  headerbar.py  loading.py  notification.py  settings.py  shortcuts.py  soundconfig.py  time.py  window.py  zoombox.py
build-aux/flatpak/: com.github.bilelmoussaoui.AudioCutter.json  org.gnome.AudioCutter.json
build-aux/meson/: meson_post_install.py
data/: com.github.bilelmoussaoui.AudioCutter.appdata.xml.in  com.github.bilelmoussaoui.AudioCutter.desktop.in  com.github.bilelmoussaoui.AudioCutter.gresource.xml  com.github.bilelmoussaoui.AudioCutter.gschema.xml  meson.build  org.gnome.AudioCutter.appdata.xml.in  org.gnome.AudioCutter.desktop.in  org.gnome.AudioCutter.gresource.xml  org.gnome.AudioCutter.gschema.xml  style.css
data/icons/: meson.build
po/: POTFILES  fr.po  meson.build  ru.po
tests/: test_code_format.py
